# NeoF3

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: CICD.yml
f3core/: Cargo.toml
f3core/src/: cli.rs  file_fill.rs  flow.rs  lib.rs  utils.rs  verify.rs
f3core/src/tests/: fill_test.rs  helpers.rs  mod.rs
f3read/: Cargo.toml
f3read/src/: lib.rs  main.rs  tests.rs
f3write/: Cargo.toml
f3write/src/: lib.rs  main.rs  write_tests.rs
f3write/tests/: write_tests.rs
