[package]
name = "f3read"
version = "0.1.0"
edition = "2024"

[dependencies]
f3core = { path = "../f3core" }
clap    = {version = "4.5", features = [ "derive" ]}
simple-log = "2.3.0"
log = "0.4.27"
bytesize = "2.0.1"
libc = "0.2.175"
crossterm = "0.29.0"


[[bin]]
name = "nf3_read"
path = "src/main.rs" 