[package]
name = "f3write"
version = "0.1.0"
edition = "2024"

[dependencies]
f3core = { path = "../f3core" }
clap    = {version = "4.5", features = [ "derive" ]}
nix = {version = "0.30.1", features = ["fs"]}
cargo_metadata = {version = "0.22.0"}
bytesize = "2.0.1"
libc = "0.2"
tempfile = "3.20.0"
simple-log = "2.3"
log = "0.4.27"
crossterm = "0.29"

[[bin]]
name = "nf3_write"
path = "src/main.rs" 